.row.vertical-align fix

--- a/css/main.css
+++ b/css/main.css
@@ -173,8 +173,8 @@
     .main-content{
         margin-top: 140px;
     }
-    
-    .vertical-align {
+
+    .row.vertical-align {
         display: block;
     }
 
